não lembro oque fiz

--- a/config/CONSULTAS.ipynb
+++ b/config/CONSULTAS.ipynb
@@ -10,13 +10,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2729b38b",
+   "execution_count": 11,
+   "id": "b3003c0c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from config_path import outros\n",
-    "import pandas as pd"
+    "from config_path import *\n",
+    "from fuction import Funcao\n",
+    "from sqlalchemy import create_engine\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import pyodbc\n",
+    "import glob\n",
+    "import os\n",
+    "import warnings\n",
+    "warnings.simplefilter(action='ignore', category=UserWarning)"
    ]
   },
   {
@@ -29,11 +37,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "26309208",
+   "execution_count": 12,
+   "id": "5fda4b35",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Conectado!\n",
+      "Nome: ACUMULADO (Tipo: TABLE)\n"
+     ]
+    }
+   ],
+   "source": [
+    "DB_ACUMULADO = r'C:\\Users\\wesley.oliveira\\WS_OLIVEIRA\\BASE_DADOS\\ACUMULADOS\\db_cheio_vazio.accdb'\n",
+    "DRIVER = '{Microsoft Access Driver (*.mdb, *.accdb)}'\n",
+    "NOME_TABELA = 'ACUMULADO'\n",
+    "\n",
+    "try:\n",
+    "    conn = pyodbc.connect(\n",
+    "        f\"DRIVER={DRIVER};\"\n",
+    "        f\"DBQ={DB_ACUMULADO};\"\n",
+    "    )\n",
+    "\n",
+    "    engine = create_engine(f\"mssql+pyodbc:///?odbc_connect={conn}\")\n",
+    "    print(\"Conectado!\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Falha na conexão com o Access: {e}\")\n",
+    "    \n",
+    "cursor = conn.cursor()\n",
+    "\n",
+    "for table_info in cursor.tables(tableType='table'):\n",
+    "        nome_tabela = table_info[2]\n",
+    "        tipo = table_info[3] \n",
+    "        print(f\"Nome: {nome_tabela} (Tipo: {tipo})\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -45,11 +84,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3dd29f33",
+   "execution_count": 13,
+   "id": "59bbf105",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Código</th>\n",
+       "      <th>END</th>\n",
+       "      <th>COD</th>\n",
+       "      <th>DESC</th>\n",
+       "      <th>RUA</th>\n",
+       "      <th>PREDIO</th>\n",
+       "      <th>NIVEL</th>\n",
+       "      <th>APTO</th>\n",
+       "      <th>RETORNO</th>\n",
+       "      <th>DATA_RELATORIO</th>\n",
+       "      <th>NOME_RELATORIO</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [Código, END, COD, DESC, RUA, PREDIO, NIVEL, APTO, RETORNO, DATA_RELATORIO, NOME_RELATORIO]\n",
+       "Index: []"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "query_consulta = f\"SELECT * FROM {NOME_TABELA}\"\n",
+    "\n",
+    "cursor.execute(query_consulta)\n",
+    "\n",
+    "dados = cursor.fetchall()\n",
+    "colunas = [column[0] for column in cursor.description]\n",
+    "df_bd = pd.DataFrame.from_records(dados, columns=colunas)\n",
+    "display(df_bd)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d5526854",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "erros: {'ETAPA_CONSOLIDADO': ('VAZIO-19-11.xlsx', '\"[\\'data_relatorio\\'] not in index\"')}\n"
+     ]
+    }
+   ],
+   "source": [
+    "pasta_files = glob.glob(os.path.join(directory.dir_cheio_vazio, \"*xls*\"))\n",
+    "\n",
+    "list_processado = []\n",
+    "list_erros = {}\n",
+    "\n",
+    "for file in pasta_files:\n",
+    "    NAME_FILE = os.path.basename(file)\n",
+    "    try:\n",
+    "        df = pd.read_excel(file, header= 2)\n",
+    "        df_filtrado = df.loc[df['Retorno'].isin(['CHEIO', 'VAZIO'])]\n",
+    "        df_filtrado = df_filtrado[['END', 'COD', 'DESCRIÇÃO', 'RUA', 'PREDIO', 'NIVEL', 'APTO', 'Retorno', 'data_relatorio']]\n",
+    "        df_filtrado['NAME_FILE'] = NAME_FILE\n",
+    "        list_processado.append(df_filtrado)\n",
+    "    except Exception as e:\n",
+    "        list_erros['ETAPA_CONSOLIDADO'] = str(NAME_FILE), str(e)\n",
+    "\n",
+    "print(f\"erros: {list_erros}\")\n",
+    "df_consolidado = pd.concat(list_processado, axis= 'index')\n",
+    "\n",
+    "col_int = ['END', 'COD','RUA','PREDIO','NIVEL','APTO']\n",
+    "for col in col_int:\n",
+    "    try:\n",
+    "        df_consolidado[col] = df_consolidado[col].fillna(0).astype(int)\n",
+    "    except Exception as e:\n",
+    "        list_erros.clear()\n",
+    "        list_erros[col] = str(e)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -60,19 +201,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "72ec36ae",
+   "metadata": {},
+   "source": [
+    "CARGA"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e57ce078",
+   "id": "976bad9f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "\"\"\"\n",
+    "    CONECÇÃO COM OS EXCEL\n",
+    "\"\"\"\n",
+    "# with pd.ExcelWriter(ipynb.retorno) as fim:\n",
+    "#     df_sandalia.to_excel(fim, index= False, sheet_name= \"RETORNO\")\n",
+    "\n",
+    "\"\"\"\n",
+    "   CONECÇÃO COM O ACCESS\n",
+    " \"\"\"\n",
+    "\n",
+    "# try:\n",
+    "#     df_exemplo.to_sql(\n",
+    "#         name=NOME_TABELA,\n",
+    "#         con=engine,\n",
+    "#         if_exists='append', # 'replace' (remover e recriar) ou 'append' (adicionar)\n",
+    "#         index=False           # Não salvar o índice do DataFrame como coluna\n",
+    "#     )\n",
+    "#     print(f\"✅ DataFrame salvo com sucesso na tabela '{NOME_TABELA}' no Access.\")\n",
+    "# except Exception as e:\n",
+    "#     print(f\"❌ Ocorreu um erro ao salvar os dados: {e}\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".meu_ambiente",
    "language": "python",
    "name": "python3"
   },
@@ -86,7 +254,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
