--- a/config/CORTE_CONSULTA.ipynb
+++ b/config/CORTE_CONSULTA.ipynb
@@ -10,13 +10,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "2729b38b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from config_path import outros\n",
-    "import pandas as pd"
+    "from config_path import outros, relatorios\n",
+    "import pandas as pd\n",
+    "import warnings\n",
+    "import locale\n",
+    "locale.setlocale(locale.LC_ALL, 'pt_BR.UTF-8')\n",
+    "warnings.simplefilter(action='ignore', category=UserWarning)"
    ]
   },
   {
@@ -29,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 7,
    "id": "26309208",
    "metadata": {},
    "outputs": [],
@@ -38,7 +42,9 @@
     "df_corte_geral = pd.read_excel(outros.ou_corte, sheet_name= \"CORTE 2025\", usecols= col_corte) \n",
     "\n",
     "col_estoque = ['Código', 'Estoque', 'Qtde Pedida','Bloqueado(Qt.Bloq.-Qt.Avaria)', 'Qt.Avaria']\n",
-    "df_estoque = pd.read_excel(outros.ou_86, usecols= col_estoque)"
+    "df_estoque = pd.read_excel(outros.ou_86, usecols= col_estoque)\n",
+    "\n",
+    "df_prod = pd.read_excel(relatorios.rel_96, usecols= ['DTULTENT', 'CODPROD'])\n"
    ]
   },
   {
@@ -51,21 +57,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 8,
    "id": "3dd29f33",
    "metadata": {},
    "outputs": [],
    "source": [
-    "filtro_data = df_corte_geral['DATA'].max() - pd.Timedelta(days= 20)\n",
-    "df_filtrado = df_corte_geral.loc[df_corte_geral['DATA'] > filtro_data].copy()\n",
+    "filtro_data = df_corte_geral['DATA'].max() - pd.Timedelta(days= 10)\n",
+    "df_filtrado = df_corte_geral.loc[(df_corte_geral['DATA'] > filtro_data) & (df_corte_geral['MOTIVO'] != \"DEPURAÇÃO DE PESO VARIÁVEL\")].copy()\n",
+    "df_filtrado ['FUNCIONARIO'] = df_filtrado['FUNCIONARIO'].str.split().str[0] + \" \" + df_filtrado['FUNCIONARIO'].str.split().str[-1]\n",
     "\n",
     "grupo = df_filtrado.groupby([\"COD\", \"DESCRIÇÃO\"]).agg(\n",
+    "    ULT_DATA = (\"DATA\", \"max\"),\n",
     "    DIAS_CORTE = (\"DATA\", \"nunique\"),\n",
     "    TOTAL_CORTE = (\"QTDE CORTE\", \"sum\"),\n",
     "    VL_CORTE = (\"VL CORTE\", lambda x: round(x.sum(), 2))\n",
     ").reset_index().astype({\"COD\": \"int\", \"TOTAL_CORTE\": \"int\"}).sort_values('DIAS_CORTE', ascending=False)\n",
     "\n",
     "df_final = grupo.merge(df_estoque, left_on='COD', right_on= 'Código', how= 'left').drop(columns= 'Código')\n",
+    "df_final = df_final.merge(df_prod, left_on= 'COD', right_on= 'CODPROD', how= 'left').drop(columns= 'CODPROD')\n",
+    "\n",
     "df_final = df_final.fillna({'Estoque':0, \"Qtde Pedida\":0}).astype({\"Estoque\": \"int\", \"Qtde Pedida\": \"int\"})\n",
     "df_final[\"BLOQUEIO\"] = df_final[\"Bloqueado(Qt.Bloq.-Qt.Avaria)\"].fillna(0).astype(int) + df_final[\"Qt.Avaria\"].fillna(0).astype(int)\n",
     "df_final = df_final.drop(columns= ['Bloqueado(Qt.Bloq.-Qt.Avaria)', 'Qt.Avaria'])\n",
@@ -82,10 +92,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "id": "e57ce078",
+   "execution_count": 9,
+   "id": "2356bf54",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "valor corte: R$ 2.992,16 || qtde: 6\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -109,56 +126,136 @@
        "      <th></th>\n",
        "      <th>COD</th>\n",
        "      <th>DESCRIÇÃO</th>\n",
+       "      <th>ULT_DATA</th>\n",
        "      <th>DIAS_CORTE</th>\n",
        "      <th>TOTAL_CORTE</th>\n",
        "      <th>VL_CORTE</th>\n",
        "      <th>Estoque</th>\n",
-       "      <th>Qtde Pedida</th>\n",
        "      <th>BLOQUEIO</th>\n",
        "      <th>DIFERENCA</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>152001</td>\n",
-       "      <td>SAL CISNE CHURRASCO 1KG</td>\n",
+       "      <th>3</th>\n",
+       "      <td>469797</td>\n",
+       "      <td>SABAO PO AMACITEL 1,6KG SACHET TOQ POE</td>\n",
+       "      <td>2025-12-05</td>\n",
+       "      <td>3</td>\n",
        "      <td>6</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1102.42</td>\n",
+       "      <td>362.47</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
        "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>459577</td>\n",
-       "      <td>RESF QUEIJO MUSSARELA ITALAC</td>\n",
-       "      <td>3</td>\n",
+       "      <td>442928</td>\n",
+       "      <td>ACHOC TODDY REFORCADO SACHET 700GR</td>\n",
+       "      <td>2025-12-08</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>333.70</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>7.07</td>\n",
-       "      <td>162</td>\n",
-       "      <td>642</td>\n",
-       "      <td>80</td>\n",
-       "      <td>82</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>447535</td>\n",
+       "      <td>SAND HAV FEM SLIM L PTO 39/0</td>\n",
+       "      <td>2025-12-11</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>136.65</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>306900</td>\n",
+       "      <td>GUARD FS SANTEPEL GRANDE 33X30 50X1UN</td>\n",
+       "      <td>2025-12-12</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>77.21</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>455562</td>\n",
+       "      <td>SARDINHA ROBINSON CRUSOE 125GR OLEO</td>\n",
+       "      <td>2025-12-10</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1611.13</td>\n",
+       "      <td>9</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>428813</td>\n",
+       "      <td>DESINF PINHO BRIL 1LT FLORES LIMAO</td>\n",
+       "      <td>2025-12-04</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>471.00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      COD                     DESCRIÇÃO  DIAS_CORTE  TOTAL_CORTE  VL_CORTE  \\\n",
-       "0  152001       SAL CISNE CHURRASCO 1KG           6            8   1102.42   \n",
-       "6  459577  RESF QUEIJO MUSSARELA ITALAC           3            0      7.07   \n",
+       "       COD                               DESCRIÇÃO   ULT_DATA  DIAS_CORTE  \\\n",
+       "3   469797  SABAO PO AMACITEL 1,6KG SACHET TOQ POE 2025-12-05           3   \n",
+       "6   442928      ACHOC TODDY REFORCADO SACHET 700GR 2025-12-08           2   \n",
+       "8   447535            SAND HAV FEM SLIM L PTO 39/0 2025-12-11           2   \n",
+       "11  306900   GUARD FS SANTEPEL GRANDE 33X30 50X1UN 2025-12-12           2   \n",
+       "30  455562     SARDINHA ROBINSON CRUSOE 125GR OLEO 2025-12-10           2   \n",
+       "39  428813      DESINF PINHO BRIL 1LT FLORES LIMAO 2025-12-04           2   \n",
        "\n",
-       "   Estoque  Qtde Pedida  BLOQUEIO  DIFERENCA  \n",
-       "0        2            0         1          1  \n",
-       "6      162          642        80         82  "
+       "    TOTAL_CORTE  VL_CORTE  Estoque  BLOQUEIO  DIFERENCA  \n",
+       "3             6    362.47        6         4          2  \n",
+       "6             2    333.70        1         0          1  \n",
+       "8             5    136.65        5         4          1  \n",
+       "11            2     77.21       20         0         20  \n",
+       "30            7   1611.13        9         8          1  \n",
+       "39            4    471.00        3         2          1  "
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "caso_1 = df_final.loc[(df_final['DIFERENCA'] > 0) & (df_final['DIAS_CORTE'] > 1) & (df_final['ULT_DATA'] > df_final['DTULTENT'])].copy()\n",
+    "caso_1 = caso_1.drop(columns= ['DTULTENT','Qtde Pedida'])\n",
+    "\n",
+    "total_corte = locale.currency(caso_1['VL_CORTE'].sum(), grouping=True)\n",
+    "qtde_corte = caso_1['DESCRIÇÃO'].count()\n",
+    "print(f\"valor corte: {total_corte} || qtde: {qtde_corte}\")\n",
+    "display(caso_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "e57ce078",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "valor corte: R$ 52,15 || qtde: 2\n"
+     ]
     },
     {
      "data": {
@@ -185,8 +282,6 @@
        "      <th>COD</th>\n",
        "      <th>DESCRIÇÃO</th>\n",
        "      <th>RUA</th>\n",
-       "      <th>PREDIO</th>\n",
-       "      <th>APTO</th>\n",
        "      <th>QTDE CORTE</th>\n",
        "      <th>VL CORTE</th>\n",
        "      <th>MOTIVO</th>\n",
@@ -195,143 +290,39 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>15908</th>\n",
-       "      <td>2025-11-05</td>\n",
-       "      <td>152001</td>\n",
-       "      <td>SAL CISNE CHURRASCO 1KG</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>70.0</td>\n",
-       "      <td>101.0</td>\n",
+       "      <th>16939</th>\n",
+       "      <td>2025-12-09</td>\n",
+       "      <td>476146</td>\n",
+       "      <td>BATATA PRINGLES 100GR NETFLIX BACON</td>\n",
+       "      <td>32.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>130.89</td>\n",
+       "      <td>9.20</td>\n",
        "      <td>QUANTIDADE INFERIOR DA OS</td>\n",
-       "      <td>YAGO RODRIGUES DA SILVA</td>\n",
+       "      <td>JANDIRA MOTA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15963</th>\n",
-       "      <td>2025-11-06</td>\n",
-       "      <td>152001</td>\n",
-       "      <td>SAL CISNE CHURRASCO 1KG</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>70.0</td>\n",
-       "      <td>101.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>134.74</td>\n",
+       "      <th>16918</th>\n",
+       "      <td>2025-12-08</td>\n",
+       "      <td>476146</td>\n",
+       "      <td>BATATA PRINGLES 100GR NETFLIX BACON</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>42.95</td>\n",
        "      <td>QUANTIDADE INFERIOR DA OS</td>\n",
-       "      <td>YAGO RODRIGUES DA SILVA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15985</th>\n",
-       "      <td>2025-11-07</td>\n",
-       "      <td>152001</td>\n",
-       "      <td>SAL CISNE CHURRASCO 1KG</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>70.0</td>\n",
-       "      <td>101.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>140.35</td>\n",
-       "      <td>QUANTIDADE INFERIOR DA OS</td>\n",
-       "      <td>TAINA MEDEIROS RIBEIRO</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15986</th>\n",
-       "      <td>2025-11-07</td>\n",
-       "      <td>152001</td>\n",
-       "      <td>SAL CISNE CHURRASCO 1KG</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>70.0</td>\n",
-       "      <td>101.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>134.53</td>\n",
-       "      <td>QUANTIDADE INFERIOR DA OS</td>\n",
-       "      <td>YAGO RODRIGUES DA SILVA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16065</th>\n",
-       "      <td>2025-11-11</td>\n",
-       "      <td>152001</td>\n",
-       "      <td>SAL CISNE CHURRASCO 1KG</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>508.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>147.37</td>\n",
-       "      <td>QUANTIDADE INFERIOR DA OS</td>\n",
-       "      <td>CARLOS ALBERTO SANTOS DA SILVA FILHO</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16123</th>\n",
-       "      <td>2025-11-12</td>\n",
-       "      <td>152001</td>\n",
-       "      <td>SAL CISNE CHURRASCO 1KG</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>508.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>138.00</td>\n",
-       "      <td>QUANTIDADE INFERIOR DA OS</td>\n",
-       "      <td>YAGO RODRIGUES DA SILVA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16131</th>\n",
-       "      <td>2025-11-12</td>\n",
-       "      <td>152001</td>\n",
-       "      <td>SAL CISNE CHURRASCO 1KG</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>508.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>138.27</td>\n",
-       "      <td>QUANTIDADE INFERIOR DA OS</td>\n",
-       "      <td>TAINA MEDEIROS RIBEIRO</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16302</th>\n",
-       "      <td>2025-11-19</td>\n",
-       "      <td>152001</td>\n",
-       "      <td>SAL CISNE CHURRASCO 1KG</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>508.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>138.27</td>\n",
-       "      <td>QUANTIDADE INFERIOR DA OS</td>\n",
-       "      <td>TAINA MEDEIROS RIBEIRO</td>\n",
+       "      <td>TAYNARA ALMEIDA</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            DATA     COD                DESCRIÇÃO   RUA  PREDIO   APTO  \\\n",
-       "15908 2025-11-05  152001  SAL CISNE CHURRASCO 1KG   4.0    70.0  101.0   \n",
-       "15963 2025-11-06  152001  SAL CISNE CHURRASCO 1KG   4.0    70.0  101.0   \n",
-       "15985 2025-11-07  152001  SAL CISNE CHURRASCO 1KG   4.0    70.0  101.0   \n",
-       "15986 2025-11-07  152001  SAL CISNE CHURRASCO 1KG   4.0    70.0  101.0   \n",
-       "16065 2025-11-11  152001  SAL CISNE CHURRASCO 1KG  60.0     1.0  508.0   \n",
-       "16123 2025-11-12  152001  SAL CISNE CHURRASCO 1KG  60.0     1.0  508.0   \n",
-       "16131 2025-11-12  152001  SAL CISNE CHURRASCO 1KG  60.0     1.0  508.0   \n",
-       "16302 2025-11-19  152001  SAL CISNE CHURRASCO 1KG  60.0     1.0  508.0   \n",
+       "            DATA     COD                            DESCRIÇÃO   RUA  \\\n",
+       "16939 2025-12-09  476146  BATATA PRINGLES 100GR NETFLIX BACON  32.0   \n",
+       "16918 2025-12-08  476146  BATATA PRINGLES 100GR NETFLIX BACON  32.0   \n",
        "\n",
-       "       QTDE CORTE  VL CORTE                     MOTIVO  \\\n",
-       "15908         1.0    130.89  QUANTIDADE INFERIOR DA OS   \n",
-       "15963         1.0    134.74  QUANTIDADE INFERIOR DA OS   \n",
-       "15985         1.0    140.35  QUANTIDADE INFERIOR DA OS   \n",
-       "15986         1.0    134.53  QUANTIDADE INFERIOR DA OS   \n",
-       "16065         1.0    147.37  QUANTIDADE INFERIOR DA OS   \n",
-       "16123         1.0    138.00  QUANTIDADE INFERIOR DA OS   \n",
-       "16131         1.0    138.27  QUANTIDADE INFERIOR DA OS   \n",
-       "16302         1.0    138.27  QUANTIDADE INFERIOR DA OS   \n",
-       "\n",
-       "                                FUNCIONARIO  \n",
-       "15908               YAGO RODRIGUES DA SILVA  \n",
-       "15963               YAGO RODRIGUES DA SILVA  \n",
-       "15985                TAINA MEDEIROS RIBEIRO  \n",
-       "15986               YAGO RODRIGUES DA SILVA  \n",
-       "16065  CARLOS ALBERTO SANTOS DA SILVA FILHO  \n",
-       "16123               YAGO RODRIGUES DA SILVA  \n",
-       "16131                TAINA MEDEIROS RIBEIRO  \n",
-       "16302                TAINA MEDEIROS RIBEIRO  "
+       "       QTDE CORTE  VL CORTE                     MOTIVO      FUNCIONARIO  \n",
+       "16939         1.0      9.20  QUANTIDADE INFERIOR DA OS     JANDIRA MOTA  \n",
+       "16918         5.0     42.95  QUANTIDADE INFERIOR DA OS  TAYNARA ALMEIDA  "
       ]
      },
      "metadata": {},
@@ -339,12 +330,14 @@
     }
    ],
    "source": [
-    "caso_1 = df_final.loc[(df_final['DIFERENCA'] > 0) & (df_final['DIAS_CORTE'] > 2)]\n",
+    "caso_2 = df_filtrado.loc[(df_filtrado['COD'] == 476146)]\n",
+    "caso_2 = caso_2[['DATA','COD', 'DESCRIÇÃO', 'RUA','QTDE CORTE', 'VL CORTE','MOTIVO','FUNCIONARIO']]\n",
     "\n",
-    "caso_2 = df_filtrado.loc[(df_filtrado['COD'] == 152001)]\n",
     "\n",
-    "display(caso_1.head(8))\n",
-    "display(caso_2)\n"
+    "total_corte = locale.currency(caso_2['VL CORTE'].sum(), grouping=True)\n",
+    "qtde_corte = caso_2['DESCRIÇÃO'].count()\n",
+    "print(f\"valor corte: {total_corte} || qtde: {qtde_corte}\")\n",
+    "display(caso_2.sort_values(by='DATA', ascending= False))\n"
    ]
   }
  ],
